--- a/css/college.css
+++ b/css/college.css
@@ -6,8 +6,7 @@ body {
   }
 svg {
     width: 100%;
-    height: 100vh;
-    border-style: solid;
+    height: 100%;
   }
 .screen1 { 
     display: grid;
