--- a/css/college.css
+++ b/css/college.css
@@ -15,12 +15,12 @@ svg {
     grid-template-rows: 1fr 10fr 1fr;
     height: 100vh;
     position: relative;
-
+    background-color: #e6f2e8;
   }
 .screen2 { 
     display: grid;
-    grid-template-columns: 1fr 4.5fr 2.5fr .25fr 2fr 2fr 1.5fr .25fr;
-    grid-template-rows: 1fr 4fr 10.5fr;
+    grid-template-columns: 1fr 4.5fr 2.5fr .25fr 2fr 2fr 1.5fr .05fr;
+    grid-template-rows: 3.5fr 3fr 10.5fr;
     height: 100vh;
     position: relative;
   }
@@ -28,9 +28,10 @@ svg {
     grid-column: 2 / 2;
     grid-row: 1 / 1;
     font-size: 1.5em;
+    background-color: #e6f2e8;
   }
 .region {
-    color: #5E7DC7;
+    color: #1FA62E;
 }
 .content {
     grid-column: 2 / 2;
@@ -54,13 +55,20 @@ svg {
     display: flex;
     justify-content: space-around;
     align-items: safe center;
+    background-color: #f0f7f1;
+}
+.right-corner {
+    grid-column: 8 / 8;
+    grid-row: 1 / 1;
+    background-color: #e6f2e8;
 }
 .header {
-    grid-area: 1 / 1 / 1 / 7;
+    grid-area: 1 / 1 / 1 / 8;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: safe center;
+    background-color: #e6f2e8;
     font-size: 20px;
 }
 .subtext {
@@ -71,16 +79,14 @@ svg {
     display: flex;
     justify-content: center;
     align-items: safe center;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
-    border: .5px solid #967972;
-    background-color: #ddf0e1;
 }
 button {
     -webkit-appearance: none;
-    border: .5px solid #967972;
+    border: .5px solid #1FA62E;
     border-radius: 4px;
-    background-color: #ddf0e1;
+    background-color: #e1e6e2;
     box-shadow: none;
 }
 .controls > button {
@@ -88,11 +94,11 @@ button {
     padding: auto;
     margin: none;
     border: auto;
-    background-color: #d5ebe2;
+    background-color: #e1e6e2;
     width: auto;
 }
 #zoomin {
-    width: 21px;
+    width: 25px;
 }
 
 
